--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+### Vagrant ###
+# General
+.vagrant/
+
+# Log files (if you are creating logs in debug mode, uncomment this)
+# *.log
+
+### Vagrant Patch ###
+*.box
+
+### Others ###
+*.txt
+*.log
+
+### Java
 # Compiled class file
 *.class
 
